tests/checker/fail/unknown_constructor_type.can
main = () => Unit {
    Mystery("hi").print()
}
